# workflow

./: .gitignore  AGENTS.md  README.md  README_NEXT_STEPS.md  index.html  package-lock.json  package.json  vite.config.ts
assignments/: CASE_007.md  FRONTEND_UI.md
backend/: pyproject.toml  requirements.txt
backend/src/hypoweaver/: __init__.py  adapters.py  api.py  benchmark_runner.py  blind_api.py  blind_engine.py  blind_models.py  blind_prompts.py  blind_repository.py  case_import.py  definition.py  engine.py  models.py  prompts.py  repository.py  research_api.py  research_engine.py  runtime_config.py  seal.py  spatial.py
backend/tests/: test_benchmark_runner.py  test_blind_engine.py  test_case_import.py  test_engine.py  test_research_engine.py  test_runtime_config.py
config/: case-assignments.json  release-package.example.json
docs/: CASE_001_ESG_SDLA_BLIND_RETEST.md  CASE_001_ESG_SDLA_SAFE_INPUT.json  CASE_001_SPATIAL_BLIND_COMPARISON.md  COORDINATOR_GUIDE_ZH.md  GROUP2_WORKFLOW_ARCHITECTURE.md  ON_DEMAND_FETCH_ZH.md  STUDENT_RUNBOOK_ZH.md
examples/: case1-profile.json
public/workflows/: 04_AppA_humaninput.yml  05_AppB_BlindEvaluator.yml
scripts/: build_case_dictionary.mjs  build_spatial_aligned_case.py  case_operator.py
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src/components/: AppHeader.tsx  CreateRunDialog.tsx  ExecutionWorkspace.tsx  (+10 more)
student-benchmark/: AGENTS.md  README.md
student-ops/: AGENTS.md  README.md
tests/: caseFolder.test.ts  executionRevision.test.ts  parseDifyWorkflow.test.ts  researchDraft.test.ts  runtimeApi.test.ts
(+57 files in other folders)
