[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "hypoweaver-engine"
version = "0.1.0"
description = "Code-native workflow engine for HypoWeaver-Qwen"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.109,<1",
  "httpx>=0.26,<1",
  "linearmodels>=7,<8",
  "numpy>=2,<3",
  "openai>=1.10,<3",
  "pandas>=2.2,<3",
  "pydantic>=2.5,<3",
  "scipy>=1.13,<2",
  "uvicorn>=0.27,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
